Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104379

[REG 6.3.0 -> 6.3.1] Crash when trying to debug QML Application

XMLWordPrintable

    • iOS/tvOS/watchOS, macOS
    • 33aa69529c (qt/qtdeclarative/dev) cd78d2893d (qt/qtdeclarative/6.4) cd78d2893d (qt/tqtc-qtdeclarative/6.4) e8bb8e4085 (qt/qtdeclarative/6.3) e8bb8e4085 (qt/tqtc-qtdeclarative/6.3)

      When trying to debug an application (C++ and QML debugging enabled), a crash occurs shortly after app launch.

      The project is attached to this ticket. 

      The crash is not reproducible in Qt 6.3.0

      Callstack:

      1 int std::__cxx_atomic_fetch_add<int>(std::__cxx_atomic_base_impl<int> *, int, std::memory_order) atomic 1050 0x1023139d8 2 std::__atomic_base<int, true>::fetch_add(int, std::memory_order) atomic 1719 0x1023139d8 3 std::__atomic_base<int, true>::operator++() atomic 1756 0x1023139d8 4 bool QAtomicOps<int>::ref<int>(std::atomic<int>&) qatomic_cxx11.h 281 0x1023139d8 5 QBasicAtomicInteger<int>::ref() qbasicatomic.h 101 0x1023139d8 6 QArrayData::ref() qarraydata.h 87 0x1023139d8 7 QArrayDataPointer<char16_t>::ref() qarraydatapointer.h 325 0x1023139d8 8 QArrayDataPointer<char16_t>::QArrayDataPointer(QArrayDataPointer<char16_t> const&) qarraydatapointer.h 71 0x1023139d0 9 QArrayDataPointer<char16_t>::QArrayDataPointer(QArrayDataPointer<char16_t> const&) qarraydatapointer.h 70 0x1023139c0 10 QString::QString(QString const&) qstring.h 1242 0x1023139c0 11 QString::QString(QString const&) qstring.h 1243 0x1023139c0 12 QFont::family() const qfont.cpp 823 0x1023139c0 13 QQuickFontValueType::family() const qquickvaluetypes.cpp 893 0x100debf70 14 QQuickFontValueType::qt_static_metacall(QObject *, QMetaObject::Call, int, void * *) moc_qquickvaluetypes_p.cpp 1379 0x100debf64 15 QMetaProperty::read(QObject const *) const qmetaobject.cpp 3264 0x102863234 16 QQmlWatchProxy::notifyValueChanged() qqmlwatcher.cpp 112 0x1017853d4 17 QQmlWatcher::addPropertyWatch(int, QObject *, unsigned int, QMetaProperty const&) qqmlwatcher.cpp 178 0x101785974 18 QQmlWatcher::addWatch(int, unsigned int) qqmlwatcher.cpp 128 0x101785804 19 QQmlEngineDebugServiceImpl::processMessage(QByteArray const&) qqmlenginedebugservice.cpp 574 0x10177d0a8 20 QObject::event(QEvent *) qobject.cpp 1356 0x102892bcc 21 QCoreApplicationPrivate::notify_helper(QObject *, QEvent *) qcoreapplication.cpp 1234 0x102851b38 22 QCoreApplication::notifyInternal2(QObject *, QEvent *) qcoreapplication.cpp 1067 0x1028516a0 23 QCoreApplication::sendEvent(QObject *, QEvent *) qcoreapplication.cpp 1483 0x1028528e4 24 QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *) qcoreapplication.cpp 1845 0x1028528d4 25 QCocoaEventDispatcherPrivate::processPostedEvents() qcocoaeventdispatcher.mm 902 0x1016bcc88 26 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void *) qcocoaeventdispatcher.mm 925 0x1016bd318 27 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x193081034 28 __CFRunLoopDoSource0 (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x193080f80 29 __CFRunLoopDoSources0 (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x193080c80 30 __CFRunLoopRun (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x19307f600 31 CFRunLoopRunSpecific (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x19307eb24 32 RunCurrentEventLoopInMode (arm64e) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox 0x19bcb7338 33 ReceiveNextEventCommon (arm64e) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox 0x19bcb70b4 34 _BlockUntilNextEventMatchingListInModeWithFilter (arm64e) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox 0x19bcb6e68 35 _DPSNextEvent (arm64e) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit 0x195be578c 36 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] (arm64e) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit 0x195be4084 37 -[NSApplication run] (arm64e) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit 0x195bd6250 38 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) qcocoaeventdispatcher.mm 430 0x1016bc200 39 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) qeventloop.cpp 136 0x10285acfc 40 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) qeventloop.cpp 218 0x10285acd8 41 QCoreApplication::exec() qcoreapplication.cpp 1388 0x102851d54 42 main main.cpp 18 0x1000071c8 43 start (arm64e) /usr/lib/dyld 0x10003908c
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sami.shalayel Sami Shalayel
            madwinter Marcus Tillmanns
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes