src/plugins/qmltooling/qmldbg_debugger/qqmlwatcher.cpp
@@ -76,28 +76,36 @@ private:
     int m_id;
     QQmlWatcher *m_watch;
     QObject *m_object;
+    bool m_isGadget;
     int m_debugId;
     QMetaProperty m_property;
 
     QQmlExpression *m_expr;
 };
 
-QQmlWatchProxy::QQmlWatchProxy(int id,
-                             QQmlExpression *exp,
-                             int debugId,
-                             QQmlWatcher *parent)
-: QObject(parent), m_id(id), m_watch(parent), m_object(nullptr), m_debugId(debugId), m_expr(exp)
+QQmlWatchProxy::QQmlWatchProxy(int id, QQmlExpression *exp, int debugId, QQmlWatcher *parent)
+    : QObject(parent),
+      m_id(id),
+      m_watch(parent),
+      m_object(nullptr),
+      m_isGadget(false),
+      m_debugId(debugId),
+      m_expr(exp)
 {
     QObject::connect(m_expr, &QQmlExpression::valueChanged,
                      this, &QQmlWatchProxy::notifyValueChanged);
 }
 
-QQmlWatchProxy::QQmlWatchProxy(int id,
-                             QObject *object,
-                             int debugId,
-                             const QMetaProperty &prop,
-                             QQmlWatcher *parent)
-: QObject(parent), m_id(id), m_watch(parent), m_object(object), m_debugId(debugId), m_property(prop), m_expr(nullptr)
+QQmlWatchProxy::QQmlWatchProxy(int id, QObject *object, int debugId, const QMetaProperty &prop,
+                               QQmlWatcher *parent)
+    : QObject(parent),
+      m_id(id),
+      m_watch(parent),
+      m_object(object),
+      m_isGadget(typeid(*m_object) == typeid(QQmlGadgetPtrWrapper)),
+      m_debugId(debugId),
+      m_property(prop),
+      m_expr(nullptr)
 {
     static int refreshIdx = -1;
     if(refreshIdx == -1)
@@ -109,7 +117,13 @@ QQmlWatchProxy::QQmlWatchProxy(int id,
 
 void QQmlWatchProxy::notifyValueChanged()
 {
-    const QVariant v = m_expr ? m_expr->evaluate() : m_property.read(m_object);
+    QVariant v;
+    if (m_expr)
+        v = m_expr->evaluate();
+    else if (m_isGadget)
+        v = static_cast<QQmlGadgetPtrWrapper *>(m_object)->readOnGadget(m_property);
+    else
+        v = m_property.read(m_object);
     emit m_watch->propertyChanged(m_id, m_debugId, m_property, v);
 }
 
